Jend text changed to Work From Home

--- a/src/app/components/pages/blog-page/blog-page.component.html
+++ b/src/app/components/pages/blog-page/blog-page.component.html
@@ -225,7 +225,7 @@
                                 <i class="ri-mail-line"></i> 02 Comments
                             </li>
                         </ul>
-                        <h3><a routerLink="/blog-details">How Our Customers Drive Innovation at Jend</a></h3>
+                        <h3><a routerLink="/blog-details">How Our Customers Drive Innovation at Work From Home</a></h3>
                     </div>
                 </div>
             </div>
