--- a/src/app/components/pages/company-details-page/company-details-page.component.html
+++ b/src/app/components/pages/company-details-page/company-details-page.component.html
@@ -22,14 +22,17 @@
             <div class="col-lg-8 col-md-12">
                 <div class="company-details-desc">
                     <h4>About Our Company</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus.ands Pellentesque placerat maecenas egestas ullamcorper sed nunc. Vitae egestas tellus amet nulla something loss Pellentesque placerat maecenas egestas ullamcorper sed nunc.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus.ands Pellentesque placerat
+                        maecenas egestas ullamcorper sed nunc. Vitae egestas tellus amet nulla something loss Pellentesque placerat maecenas egestas ullamcorper sed nunc.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius.</p>
                     <h4>Overview</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus.ands Pellentesque placerat maecenas egestas ullamcorper sed nunc. Vitae egestas tellus amet nulla something loss Pellentesque placerat maecenas egestas ullamcorper sed nunc.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus.ands Pellentesque placerat
+                        maecenas egestas ullamcorper sed nunc. Vitae egestas tellus amet nulla something loss Pellentesque placerat maecenas egestas ullamcorper sed nunc.</p>
                     <ul>
                         <li>You have at least 3 years’ experience working as a Product Designer.</li>
                         <li>You have experience using Sketch and InVision or Framer</li>
-                        <li>You have some previous experience working in an agile environment – Think two-week sprints.</li>
+                        <li>You have some previous experience working in an agile environment – Think two-week sprints.
+                        </li>
                         <li>You are familiar using Jira and Confluence in your workflow</li>
                     </ul>
                     <h4>Our Achivments</h4>
@@ -53,7 +56,8 @@
                             </div>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus in that. Pellentesque placerat maecenas egestas ullamcorper sed sarinto.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus in that. Pellentesque
+                        placerat maecenas egestas ullamcorper sed sarinto.</p>
                     <h4>Our Gallery</h4>
                     <div class="row">
                         <div class="col-lg-4 col-sm-4 col-md-4">
@@ -72,7 +76,8 @@
                             </div>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus in that. Pellentesque placerat maecenas egestas ullamcorper sed sarinto.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus in that. Pellentesque
+                        placerat maecenas egestas ullamcorper sed sarinto.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-12">
@@ -87,16 +92,13 @@
                         </div>
                         <ul class="features-list">
                             <li>
-                                <span>Industry</span>
-                                Customer Service
+                                <span>Industry</span> Customer Service
                             </li>
                             <li>
-                                <span>Company size</span>
-                                178 employees
+                                <span>Company size</span> 178 employees
                             </li>
                             <li>
-                                <span>Founded in</span>
-                                2011
+                                <span>Founded in</span> 2011
                             </li>
                             <li>
                                 <span>Phone</span>
@@ -104,15 +106,14 @@
                             </li>
                             <li>
                                 <span>Email</span>
-                                <a href="tel:hello@jend.com">hello@jend.com</a>
+                                <a href="tel:workfromhome.com">workfromhome.com</a>
                             </li>
                             <li>
-                                <span>Location</span>
-                                Brooklyn, NY
+                                <span>Location</span> Brooklyn, NY
                             </li>
                             <li>
                                 <span>Website</span>
-                                <a href="#" target="_blank">https://jend.com</a>
+                                <a href="#" target="_blank">https://workfromhomem</a>
                             </li>
                             <li>
                                 <span>Follow us</span>
