--- a/src/app/components/pages/contact-page/contact-page.component.html
+++ b/src/app/components/pages/contact-page/contact-page.component.html
@@ -42,7 +42,7 @@
                 <div class="contact-info-item">
                     <i class="ri-question-answer-line"></i>
                     <h3>Email</h3>
-                    <p><a href="mailto:hello@jend.com">hello@jend.com</a></p>
+                    <p><a href="mailto:workfromhome.com">workfromhome.com</a></p>
                 </div>
             </div>
             <div class="col-xl-3 col-lg-4 col-sm-6">
