--- a/src/app/components/pages/job-details-page/job-details-page.component.html
+++ b/src/app/components/pages/job-details-page/job-details-page.component.html
@@ -28,8 +28,10 @@
             <div class="col-lg-8 col-md-12">
                 <div class="job-details-desc">
                     <h4>Job Description:</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate <strong>elementum</strong>. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus ands placerat maecenas egestas <a routerLink="/">ullamcorper</a> sed nunc. Vitae egestas tellus amet nulla something loss pellentesque placerat maecenas egestas ullamcorper sed nunc.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare <strong>venenatis</strong> proin ac varius ut. Vitae egestas tellus amet nulla cursus in that. Pellentesque placerat maecenas egestas ullamcorper sed sarinto.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate <strong>elementum</strong>. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus ands placerat
+                        maecenas egestas <a routerLink="/">ullamcorper</a> sed nunc. Vitae egestas tellus amet nulla something loss pellentesque placerat maecenas egestas ullamcorper sed nunc.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare <strong>venenatis</strong> proin ac varius ut. Vitae egestas tellus amet nulla cursus in that. Pellentesque
+                        placerat maecenas egestas ullamcorper sed sarinto.</p>
                     <h4>Responsabilities</h4>
                     <ul>
                         <li>Capable to handle subordinates leading, monitoring, and reporting to the management.</li>
@@ -75,20 +77,16 @@
                     <div class="widget-item">
                         <ul class="features-list">
                             <li>
-                                <span>Experience</span>
-                                Min 1 year
+                                <span>Experience</span> Min 1 year
                             </li>
                             <li>
-                                <span>Work Level</span>
-                                Entry-Level
+                                <span>Work Level</span> Entry-Level
                             </li>
                             <li>
-                                <span>Employment Type</span>
-                                Part Time
+                                <span>Employment Type</span> Part Time
                             </li>
                             <li>
-                                <span>Salary</span>
-                                20k-40k / year
+                                <span>Salary</span> 20k-40k / year
                             </li>
                         </ul>
                     </div>
@@ -102,16 +100,13 @@
                         </div>
                         <ul class="features-list">
                             <li>
-                                <span>Industry</span>
-                                Customer Service
+                                <span>Industry</span> Customer Service
                             </li>
                             <li>
-                                <span>Company size</span>
-                                178 employees
+                                <span>Company size</span> 178 employees
                             </li>
                             <li>
-                                <span>Founded in</span>
-                                2011
+                                <span>Founded in</span> 2011
                             </li>
                             <li>
                                 <span>Phone</span>
@@ -119,15 +114,14 @@
                             </li>
                             <li>
                                 <span>Email</span>
-                                <a href="tel:hello@jend.com">hello@jend.com</a>
+                                <a href="tel:workfromhome.com">workfromhome.com</a>
                             </li>
                             <li>
-                                <span>Location</span>
-                                Brooklyn, NY
+                                <span>Location</span> Brooklyn, NY
                             </li>
                             <li>
                                 <span>Website</span>
-                                <a href="#" target="_blank">https://jend.com</a>
+                                <a href="#" target="_blank">https://workfromhomecom</a>
                             </li>
                             <li>
                                 <span>Follow us</span>
