--- a/src/app/components/common/cv-cta/cv-cta.component.html
+++ b/src/app/components/common/cv-cta/cv-cta.component.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="col-lg-4 col-md-12">
                     <div class="employers-cv-btn">
-                        <a href="mailto:hello@jend.com">Upload Your CV</a>
+                        <a href="mailto:hello@workfromhome.com">Upload Your CV</a>
                     </div>
                 </div>
             </div>
