--- a/src/app/components/common/footer/footer.component.html
+++ b/src/app/components/common/footer/footer.component.html
@@ -16,7 +16,7 @@
                             </li>
                             <li>
                                 <i class="ri-mail-line"></i>
-                                <a href="mailto:hello@jend.com">hello@jend.com</a>
+                                <a href="mailto:workfromhome.com">workfromhome.com</a>
                             </li>
                             <li>
                                 <i class="ri-phone-line"></i>
@@ -33,27 +33,27 @@
                                 <a routerLink="/candidates">
                                     Browse Candidates
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/">
                                     Employer Dashboard
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/job-listings">
                                     Job Packages
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/job-listings">
                                     Jobs Featured 
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/post-a-job">
                                     Post A Job
                                 </a>
-                            </li> 
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -65,27 +65,27 @@
                                 <a routerLink="/job-listings">
                                     Browse Jobs
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/">
                                     Submit Resume
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/">
                                     Candidate Dashboard
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/job-listings">
                                     Browse Categories
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/candidates">
                                     Candidates Listing
                                 </a>
-                            </li> 
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -97,27 +97,27 @@
                                 <a routerLink="/about">
                                     About Us
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/contact">
                                     Contact Us
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/terms-condition">
                                     Terms & Conditions      
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/privacy-policy">
                                     Privacy Policy 
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/">
                                     Sitemap
                                 </a>
-                            </li> 
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -129,27 +129,27 @@
                                 <a routerLink="/about">
                                     About Us
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/blog">
                                     Blog
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/faq">
                                     FAQs
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/contact">
                                     Contact Us
                                 </a>
-                            </li> 
+                            </li>
                             <li>
                                 <a routerLink="/not-found">
                                     404 Erro Page
                                 </a>
-                            </li> 
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-7">
                     <div class="copy-right-text">
-                        <p>© Jend is Proudly Owned by <a href="https://hibotheme.com/" target="_blank">HiboTheme</a></p>
+                        <p>© Work From Home is Proudly Owned by <a href="https://hibotheme.com/" target="_blank">HiboTheme</a></p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-5">
