--- a/src/app/components/pages/faq-page/faq-page.component.html
+++ b/src/app/components/pages/faq-page/faq-page.component.html
@@ -23,8 +23,9 @@
                 <h3>Getting Started</h3>
                 <div class="accordion">
                     <accordion>
-                        <accordion-group heading="What is Jend?" [isOpened]="true">
-                            <p><strong>Jend</strong> is always looking for talented <a routerLink="/">information</a> security and IT risk management professionals who are dedicated, hard working and looking for a challenge. If you are interested in employment with <strong>Jend</strong>, a company who values you and your family, visit our careers page.</p>
+                        <accordion-group heading="What is Work From Home?" [isOpened]="true">
+                            <p><strong>Work From Home</strong> is always looking for talented <a routerLink="/">information</a> security and IT risk management professionals who are dedicated, hard working and looking for a challenge. If you are interested
+                                in employment with <strong>Work From Home</strong>, a company who values you and your family, visit our careers page.</p>
                             <ul>
                                 <li>a console</li>
                                 <li>Two Joy-Con controllers that are detachable</li>
@@ -34,7 +35,9 @@
                             </ul>
                         </accordion-group>
                         <accordion-group heading=" Can I publish a job listing on your platform?">
-                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.</p>
+                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon
+                                tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
+                                vice lomo.</p>
                             <ul>
                                 <li>a console</li>
                                 <li>Two Joy-Con controllers that are <a routerLink="/">detachable</a></li>
@@ -43,8 +46,10 @@
                                 <li>A dock which you can use to connect your console to the television for traditional gameplay</li>
                             </ul>
                         </accordion-group>
-                        <accordion-group heading="Is Jend Finder a job board?">
-                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor.</p>
+                        <accordion-group heading="Is Work From Home Finder a job board?">
+                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon
+                                tempor.
+                            </p>
                             <p>Tunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.</p>
                         </accordion-group>
                         <accordion-group heading="Can I delete my account?">
@@ -57,7 +62,9 @@
                             </ul>
                         </accordion-group>
                         <accordion-group heading="How can I change my password?">
-                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.</p>
+                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon
+                                tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
+                                vice lomo.</p>
                         </accordion-group>
                     </accordion>
                 </div>
@@ -67,7 +74,8 @@
                 <div class="accordion">
                     <accordion>
                         <accordion-group heading="How can I change the e-mail address for my account?">
-                            <p><strong>Jend</strong> is always looking for talented <a routerLink="/">information</a> security and IT risk management professionals who are dedicated, hard working and looking for a challenge. If you are interested in employment with <strong>Jend</strong>, a company who values you and your family, visit our careers page.</p>
+                            <p><strong>Work From Home</strong> is always looking for talented <a routerLink="/">information</a> security and IT risk management professionals who are dedicated, hard working and looking for a challenge. If you are interested
+                                in employment with <strong>Work From Home</strong>, a company who values you and your family, visit our careers page.</p>
                             <ul>
                                 <li>a console</li>
                                 <li>Two Joy-Con controllers that are detachable</li>
@@ -77,7 +85,9 @@
                             </ul>
                         </accordion-group>
                         <accordion-group heading="Could I request a call back?">
-                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.</p>
+                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon
+                                tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
+                                vice lomo.</p>
                             <ul>
                                 <li>a console</li>
                                 <li>Two Joy-Con controllers that are <a routerLink="/">detachable</a></li>
@@ -87,7 +97,9 @@
                             </ul>
                         </accordion-group>
                         <accordion-group heading="How do I speak to an advisor using Live Chat?">
-                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor.</p>
+                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon
+                                tempor.
+                            </p>
                             <p>Tunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.</p>
                         </accordion-group>
                         <accordion-group heading="How do I post a job on your platform?">
@@ -100,7 +112,9 @@
                             </ul>
                         </accordion-group>
                         <accordion-group heading="How can I unsubscribe from your mailing list?">
-                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.</p>
+                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon
+                                tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
+                                vice lomo.</p>
                         </accordion-group>
                     </accordion>
                 </div>
@@ -110,7 +124,8 @@
                 <div class="accordion">
                     <accordion>
                         <accordion-group heading="Can I publish a job listing for free?">
-                            <p><strong>Jend</strong> is always looking for talented <a routerLink="/">information</a> security and IT risk management professionals who are dedicated, hard working and looking for a challenge. If you are interested in employment with <strong>Jend</strong>, a company who values you and your family, visit our careers page.</p>
+                            <p><strong>Work From Home</strong> is always looking for talented <a routerLink="/">information</a> security and IT risk management professionals who are dedicated, hard working and looking for a challenge. If you are interested
+                                in employment with <strong>Work From Home</strong>, a company who values you and your family, visit our careers page.</p>
                             <ul>
                                 <li>a console</li>
                                 <li>Two Joy-Con controllers that are detachable</li>
@@ -120,7 +135,9 @@
                             </ul>
                         </accordion-group>
                         <accordion-group heading="How can I write a review?">
-                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.</p>
+                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon
+                                tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
+                                vice lomo.</p>
                             <ul>
                                 <li>a console</li>
                                 <li>Two Joy-Con controllers that are <a routerLink="/">detachable</a></li>
@@ -130,7 +147,9 @@
                             </ul>
                         </accordion-group>
                         <accordion-group heading="What are the payment methods?">
-                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor.</p>
+                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon
+                                tempor.
+                            </p>
                             <p>Tunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.</p>
                         </accordion-group>
                         <accordion-group heading="How many jobs can I post at once?">
@@ -143,7 +162,9 @@
                             </ul>
                         </accordion-group>
                         <accordion-group heading="What types of job I cannot post?">
-                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.</p>
+                            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon
+                                tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher
+                                vice lomo.</p>
                         </accordion-group>
                     </accordion>
                 </div>
