Banner texr, Pupular search list,

--- a/src/app/components/common/main-banner/main-banner.component.html
+++ b/src/app/components/common/main-banner/main-banner.component.html
@@ -1,7 +1,7 @@
 <div class="banner-area">
     <div class="container">
         <div class="banner-content">
-            <h1>Searching For A Job? <br>Find the Perfect Job Near You</h1>
+            <h1>We Give You World's Most Precious Thing - TIME <br>Find the Perfect Job Near You</h1>
             <div class="banner-form">
                 <form>
                     <div class="row">
@@ -25,13 +25,13 @@
             </div>
             <div class="popular-search">
                 <span class="title">Popular Search: </span>
-                <a routerLink="/job-listing">Designer</a>
-                <a routerLink="/job-listing">Developer</a>
+                <a routerLink="/job-listing">Moonlighting</a>
+                <!-- <a routerLink="/job-listing">Developer</a> -->
+                <a routerLink="/job-listing">Startups</a>
+                <a routerLink="/job-listing">Tech Jobs</a>
+                <a routerLink="/job-listing">Full Stack</a>
+                <a routerLink="/job-listing">Flutter</a>
                 <a routerLink="/job-listing">Web</a>
-                <a routerLink="/job-listing">iOS</a>
-                <a routerLink="/job-listing">PHP</a>
-                <a routerLink="/job-listing">Senior</a>
-                <a routerLink="/job-listing">Engineer</a>
             </div>
         </div>
     </div>
