removed unwanted text

--- a/src/app/components/common/main-banner/main-banner.component.html
+++ b/src/app/components/common/main-banner/main-banner.component.html
@@ -1,7 +1,7 @@
 <div class="banner-area">
     <div class="container">
         <div class="banner-content">
-            <h1>We Give You World's Most Precious Thing - TIME <br>Find the Perfect Job Near You</h1>
+            <h1>We Give You World's Most Precious Thing - TIME </h1>
             <div class="banner-form">
                 <form>
                     <div class="row">
