--- a/src/app/components/common/footer/footer.component.html
+++ b/src/app/components/common/footer/footer.component.html
@@ -161,7 +161,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-7">
                     <div class="copy-right-text">
-                        <p>© Work From Home is Proudly Owned by <a href="https://hibotheme.com/" target="_blank">HiboTheme</a></p>
+                        <p>2022 © Work From Home </p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-5">
