--- a/src/app/components/pages/job-listings-page/job-listings-page.component.html
+++ b/src/app/components/pages/job-listings-page/job-listings-page.component.html
@@ -2,7 +2,7 @@
 <div class="inner-banner">
     <div class="container">
         <div class="inner-title text-center">
-            <h3>One Search Hundreds of Jobs!</h3>
+            <h3>World's Biggest Database of Work from home Jobs !</h3>
             <div class="banner-form">
                 <form>
                     <div class="row">
