--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -92,16 +92,16 @@
                                     FAQ
                                 </a>
                             </li>
-                            <li class="nav-item">
+                           <!-- <li class="nav-item">
                                 <a routerLink="/profile-authentication" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                                     Login/Register
                                 </a>
-                            </li>
-                            <li class="nav-item">
+                            </li>-->
+                            <!--<li class="nav-item">
                                 <a routerLink="/forgot-password" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                                     Forgot Password
                                 </a>
-                            </li>
+                            </li>-->
                             <li class="nav-item">
                                 <a routerLink="/privacy-policy" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                                     Privacy Policy
@@ -113,9 +113,9 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a routerLink="/not-found" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                               <!-- <a routerLink="/not-found" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                                     404 Error Page
-                                </a>
+                                </a>-->
                             </li>
                         </ul>
                     </li>
@@ -265,14 +265,18 @@
                 <div class="others-option d-sm-flex align-items-center">
                     <div class="option-item">
                         <a routerLink="/profile-authentication" class="default-btn">
-                            Login <i class="ri-user-3-line"></i>
+                            Login/Register <i class="ri-user-3-line"></i>
+                        </a>
+
+                        <a routerLink="/emp-account" class="default-btn" style="margin-left:10px;">
+                            Employ <i class="ri-user-3-line"></i>
                         </a>
                     </div>
-                    <div class="option-item">
+                    <!--<div class="option-item">
                         <a routerLink="/post-a-job" class="default-btn">
                             Post A Job <i class="ri-briefcase-2-line"></i>
                         </a>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </nav>
