--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -58,10 +58,10 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="javascript:void(0)" class="dropdown-toggle nav-link">
+                        <!-- <a href="javascript:void(0)" class="dropdown-toggle nav-link">
                             Pages
-                        </a>
-                        <ul class="dropdown-menu">
+                        </a> -->
+                        <!-- <ul class="dropdown-menu">
                             <li class="nav-item">
                                 <a routerLink="/about" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                                     About Us
@@ -91,7 +91,7 @@
                                 <a routerLink="/faq" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                                     FAQ
                                 </a>
-                            </li>
+                            </li>-->
                            <!-- <li class="nav-item">
                                 <a routerLink="/profile-authentication" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                                     Login/Register
@@ -102,7 +102,7 @@
                                     Forgot Password
                                 </a>
                             </li>-->
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a routerLink="/privacy-policy" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                                     Privacy Policy
                                 </a>
@@ -113,11 +113,11 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                               <!-- <a routerLink="/not-found" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                               <a routerLink="/not-found" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                                     404 Error Page
-                                </a>-->
+                                </a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li class="nav-item">
                         <a href="javascript:void(0)" class="dropdown-toggle nav-link">
@@ -182,7 +182,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="javascript:void(0)" class="dropdown-toggle nav-link">
                             Pages
                         </a>
@@ -243,7 +243,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a href="javascript:void(0)" class="dropdown-toggle nav-link">
                             Blog
@@ -264,12 +264,12 @@
                 </ul>
                 <div class="others-option d-sm-flex align-items-center">
                     <div class="option-item">
-                        <a routerLink="/profile-authentication" class="default-btn">
-                            Login/Register <i class="ri-user-3-line"></i>
+                        <a routerLink="/candidate" class="default-btn">
+                            <i class="ri-user-3-line"></i>  Candidate 
                         </a>
 
-                        <a routerLink="/emp-account" class="default-btn" style="margin-left:10px;">
-                            Employ <i class="ri-user-3-line"></i>
+                        <a routerLink="/company" class="default-btn" style="margin-left:10px;">
+                            <i class="ri-user-3-line"></i>  Employer 
                         </a>
                     </div>
                     <!--<div class="option-item">
