--- a/src/app/components/pages/my-account-page/my-account-page.component.html
+++ b/src/app/components/pages/my-account-page/my-account-page.component.html
@@ -9,7 +9,13 @@
                         Home
                     </a>
                 </li>
-                <li>Login/Register</li>
+                <li id="login-button">Login/Register</li>
+                <li id="logout-button">
+                    <a routerLink="/logout">
+                        Home
+                    </a>
+                </li>
+
             </ul>
         </div>
     </div>
@@ -25,11 +31,11 @@
                     <form>
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="text" class="form-control" placeholder="Enter your Email">
+                            <input type="text" class="form-control" id="mobile_number" placeholder="Enter your Email">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" class="form-control" placeholder="Password">
+                            <input type="password" class="form-control" id="password" placeholder="Password">
                         </div>
                         <div class="forgot-password-wrap">
                             <a routerLink="/forgot-password" class="lost-your-password">Forgot password?</a>
