--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -278,14 +278,18 @@
                         </ul>
                     </li>
                 </ul>
-                <div *ngIf="!isUserLoggedIn;" class="others-option d-sm-flex align-items-center">
+                <div class="others-option d-sm-flex align-items-center">
                     <div class="option-item">
-                        <a routerLink="/candidate" class="default-btn">
+                        <a *ngIf="!isUserLoggedIn;" routerLink="/candidate" class="default-btn">
                             <i class="ri-user-3-line"></i> Candidate
                         </a>
 
-                        <a routerLink="/company" class="default-btn" style="margin-left:10px;">
+                        <a *ngIf="!isUserLoggedIn;" routerLink="/company" class="default-btn" style="margin-left:10px;">
                             <i class="ri-user-3-line"></i> Employer
+                        </a>
+
+                        <a *ngIf="isUserLoggedIn;" routerLink="/" class="default-btn">
+                            <i class="ri-user-3-line"></i> Logout
                         </a>
                     </div>
                 </div>
