--- a/src/app/components/pages/my-account-page/my-account-page.component.html
+++ b/src/app/components/pages/my-account-page/my-account-page.component.html
@@ -2,7 +2,7 @@
 <div class="inner-banner">
     <div class="container">
         <div class="inner-title text-center">
-            <h3>My Account</h3>
+            <h3>Login as Candidate</h3>
             <ul>
                 <li>
                     <a routerLink="/">
@@ -10,11 +10,7 @@
                     </a>
                 </li>
                 <li id="login-button">Login/Register</li>
-                <li id="logout-button">
-                    <a routerLink="/logout">
-                        Home
-                    </a>
-                </li>
+                
 
             </ul>
         </div>
@@ -50,15 +46,23 @@
                     <form>
                         <div class="form-group">
                             <label>Full Name</label>
-                            <input type="text" class="form-control" placeholder="Full Name">
+                            <input type="text" class="form-control" placeholder="Full Name" id="full_name" name="full_name">
                         </div>
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="email" class="form-control" placeholder="Email">
+                            <input type="email" class="form-control" placeholder="Email" id="email_id">
+                        </div>
+                        <div class="form-group">
+                            <label>Mobile Number (+91)</label>
+                            <input type="email" class="form-control" placeholder="Email" id="register_mobile">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" class="form-control" placeholder="Password">
+                            <input type="password" class="form-control" placeholder="Password" id="register_password">
+                        </div>
+                        <div class="form-group">
+                            <label>Confirm Password</label>
+                            <input type="password" class="form-control" placeholder="Password" id="register_confirm_password">
                         </div>
                         <p class="description">The password should be at least eight characters long. To make it stronger, use upper and lower case letters, numbers, and symbols like ! " ? $ % ^ & )</p>
                         <button type="submit">Register</button>
