--- a/src/app/components/pages/candidate-account/my-account-page.component.html
+++ b/src/app/components/pages/candidate-account/my-account-page.component.html
@@ -54,7 +54,7 @@
                         </div>
                         <div class="form-group">
                             <label>Mobile Number (+91)</label>
-                            <input type="email" class="form-control" placeholder="Email" id="register_mobile">
+                            <input type="number" class="form-control" placeholder="Email" id="register_mobile">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
@@ -65,7 +65,7 @@
                             <input type="password" class="form-control" placeholder="Password" id="register_confirm_password">
                         </div>
                         <p class="description">The password should be at least eight characters long. To make it stronger, use upper and lower case letters, numbers, and symbols like ! " ? $ % ^ & )</p>
-                        <button type="submit">Register</button>
+                        <button (click)="registerAccount()" type="button" >Register</button>
                     </form>
                 </div>
             </div>
