--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -288,6 +288,10 @@
                             <i class="ri-user-3-line"></i> Employer
                         </a>
 
+                        <a *ngIf="sessionStorage.getItem('userType') == 'company';" routerLink="/company" class="default-btn" style="margin-left:10px;">
+                            <i class="ri-user-3-line"></i> Post a Job
+                        </a>
+
                         <a *ngIf="isUserLoggedIn;" (click)="logout()" class="default-btn">
                             <i class="ri-user-3-line"></i> Logout
                         </a>
