--- a/src/app/components/pages/candidate-account/my-account-page.component.html
+++ b/src/app/components/pages/candidate-account/my-account-page.component.html
@@ -54,7 +54,7 @@
                         </div>
                         <div class="form-group">
                             <label>Mobile Number (+91)</label>
-                            <input type="number" class="form-control" placeholder="Email" id="register_mobile">
+                            <input type="number" class="form-control" placeholder="Mobile Number" id="register_mobile">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
