chacke user type

--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -288,7 +288,7 @@
                             <i class="ri-user-3-line"></i> Employer
                         </a>
 
-                        <a *ngIf="checkUserType() == 'company';" routerLink="/company" class="default-btn" style="margin-left:10px;">
+                        <a *ngIf="checkUserType();" routerLink="/post-a-job" class="default-btn" style="margin-left:10px;">
                             <i class="ri-user-3-line"></i> Post a Job
                         </a>
 
