chack if user is logged in

--- a/src/app/components/pages/my-profile-candidate/candidate-details-page.component.html
+++ b/src/app/components/pages/my-profile-candidate/candidate-details-page.component.html
@@ -2,14 +2,14 @@
 <div class="inner-banner">
     <div class="container">
         <div class="inner-title text-center">
-            <h3>Candidate Details</h3>
+            <h3>My Profile</h3>
             <ul>
                 <li>
                     <a routerLink="/">
                         Home
                     </a>
                 </li>
-                <li>Candidate Details</li>
+                <li>My Details</li>
             </ul>
         </div>
     </div>
@@ -24,7 +24,7 @@
                     <div class="profile">
                         <img src="assets/images/candidates/candidate7.jpg" class="main-image" alt="candidates-image">
                         <div class="title">
-                            <h3>Henry Alexander</h3>
+                            <h3 id="full_name"></h3>
                             <img src="assets/images/flags/switzerland.svg" alt="flag">
                         </div>
                         <p>Web Developer</p>
