company login completed

--- a/src/app/components/pages/my-details/company-details-page.component.html
+++ b/src/app/components/pages/my-details/company-details-page.component.html
@@ -22,10 +22,16 @@
             <div class="col-lg-8 col-md-12">
                 <div class="company-details-desc">
                     <h4>About Our Company</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus.ands Pellentesque placerat
+                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus.ands Pellentesque placerat
                         maecenas egestas ullamcorper sed nunc. Vitae egestas tellus amet nulla something loss Pellentesque placerat maecenas egestas ullamcorper sed nunc.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius.</p> -->
+                    
+                    <textarea name="about" id="" class="form-control" cols="30" rows="10">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, magni temporibus laudantium unde hic voluptates ducimus laborum, id tempore in nostrum velit, debitis dolore necessitatibus at consectetur maxime quisquam sit?
+                    </textarea>
                     <h4>Overview</h4>
+                    <textarea name="about" id="" class="form-control" cols="30" rows="10">
+
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Feugiat enim a erat sit vulputate elementum orci. Risus nec viverra ornare venenatis proin ac varius tristique ut. Vitae egestas tellus amet nulla cursus.ands Pellentesque placerat
                         maecenas egestas ullamcorper sed nunc. Vitae egestas tellus amet nulla something loss Pellentesque placerat maecenas egestas ullamcorper sed nunc.</p>
                     <ul>
@@ -35,6 +41,7 @@
                         </li>
                         <li>You are familiar using Jira and Confluence in your workflow</li>
                     </ul>
+                    </textarea>
                     <h4>Our Achivments</h4>
                     <div class="row justify-content-center">
                         <div class="col-lg-4 col-6 col-md-4">
