--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -258,7 +258,7 @@
                             </li>
                         </ul>
                     </li> -->
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="javascript:void(0)" class="dropdown-toggle nav-link">
                             Blog
                         </a>
@@ -276,7 +276,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
                 <div class="others-option d-sm-flex align-items-center">
                     <div class="option-item">
