edited name of pages file in components/pages

--- a/src/app/components/pages/candidate-verify-otp-page/candidate-verify-page.component.html
+++ b/src/app/components/pages/candidate-verify-otp-page/candidate-verify-page.component.html
@@ -29,7 +29,7 @@
                             <label for="text">
                             <input type="number" class="form-control" id="email-otp" placeholder="Enter Email OTP" style="display: inline">
                             
-                            <div class="otp-block" style="display: none;">
+                            <div class="otp-block" style="display: inline;">
                                 <i> Resend Otp in 10 secs</i>
                                 &nbsp;
                                 <button (click)="onClick()" type="button" id="resend-button" style="display: inline;">Resend</button>
@@ -44,7 +44,7 @@
                             <label>Phone-OTP</label>
                             <input type="number" class="form-control" id="phone-otp" placeholder="Enter Phone OTP">
 
-                            <div class="otp-block" style="display: none;">
+                            <div class="otp-block" style="display: inline;">
                                 <i style="font-weight: 500;"> Resend Otp in 10 secs </i>
                                 &nbsp;
                                 <button (click)="onClick()" type="button" id="resend-button" style="display: inline;">Resend</button>
