added candidate dashboard ver 1

--- a/src/app/components/common/footer/footer.component.html
+++ b/src/app/components/common/footer/footer.component.html
@@ -72,7 +72,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/">
+                                <a routerLink="/candidate-dashboard">
                                     Candidate Dashboard
                                 </a>
                             </li>
