added application stats table

--- a/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
+++ b/src/app/components/pages/candidate-dashboard/candidate-dashboard-page.component.html
@@ -1,13 +1,15 @@
 <!-- Page Title -->
 <div class="inner-banner">
+
     <div class="container">
-        <div class="job-card">
+        <div class="job-card" style="font-size: 95%;">
             <div class="job-image">
                 <img src="assets/images/candidates/candidate1.jpg" alt="job-image">
             </div>
-            <h3>Jhon Doe</h3>
+            <h2>Jhon Doe</h2>
             <!-- <span class="location">by <a routerLink="/">Python Developer</a> in Brooklyn, NY</span> -->
             <ul class="job-sub-content">
+
                 <a href=""><img src="assets/images/facebook.png" alt="" width="35" style="padding: 5px"></a>
                 <a href=""><img src="assets/images/linkedin.png" alt="" width="35" style="padding: 5px"></a>
                 <a href=""><img src="assets/images/behance.png" alt="" width="35" style="padding: 5px"></a>
@@ -26,7 +28,91 @@
             <button class="bookmark-btn"><i class="ri-bookmark-line"></i></button>
         </div>
     </div>
+    
+    <div class="container mt-5 mb-1" style="text-align: center;"> 
+        <h3>Job Application Stats</h3>
+    </div>
+    <div class="container mt-3 p-0">
+        <div class="job-card p-3" style="font-size: larger;">
+            <!-- <table class="table table-hover caption-top">
+                <caption>Job Application Stats</caption>
+
+                <thead>
+                  <tr>
+                    <th scope="col">Sr.No</th>
+                    <th scope="col">Selected <span> (3) </span> </th>
+                    <th scope="col">Not-Selected <span> (1) </span> </th>
+                    <th scope="col">In-Touch <span> (5) </span> </th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">Larry the Bird</td>
+                    <td>@twitter</td>
+                  </tr>
+                </tbody>
+              </table> -->
+
+
+
+            
+              <ol class="list-group list-grou">
+                <div class="dropdown">
+
+                    <li class="list-group-item d-flex justify-content-between align-items-start">
+                        <div class="ms-2 me-auto">
+
+                                <div class="fw-bold">Selected</div>
+                                
+                                Content for list item
+                        </div>
+                                <span class="badge bg-primary rounded-pill">14</span>
+
+                            </li>
+                </div>
+
+                
+                <li class="list-group-item d-flex justify-content-between align-items-start">
+                  <div class="ms-2 me-auto">
+                    <div class="fw-bold">In-Touch</div>
+                    Content for list item
+                  </div>
+                  <span class="badge bg-primary rounded-pill">14</span>
+                </li>
+
+
+                <li class="list-group-item d-flex justify-content-between align-items-start">
+                  <div class="ms-2 me-auto">
+                    <div class="fw-bold">Not-Selected</div>
+                    Content for list item
+                  </div>
+                  <span class="badge bg-primary rounded-pill">14</span>
+                </li>
+              </ol>
+
+
+
+        </div>
+    </div>
+    
+
+    
+
 </div>
+
 
 
 <h1 style="text-align: center;" class="mt-5">Your Applications</h1>
